--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <br />
             <span>Attention based Self-Distillation</span>
             <br />
-            <span>for Pruned Networks Spoofing</span>
+            <span>for Pruned Networks</span>
             <br />
             <br />
           </a>
