--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             <span class="home-text09">
               But there's more to me than code and algorithms - I'm also a math
               enthusiast with a creative soul, finding joy in art, dancing to
-              life's rhythms, and crafting melodie
+              life's rhythms, and crafting melodies
             </span>
             <span class="home-text10">
-              s on the piano. Let's connect and explore the boundless
+               on the piano. Let's connect and explore the boundless
               possibilities of technology together!
             </span>
             <br class="home-text11" />
