--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <span class="home-text19">SKYLARK LABS</span>
             <span class="home-text20">
               as a Deep Learning Intern where I work on cutting-edge
-              self-learning computer vision models for drones.
+              self-learning computer vision models for drone surveillance.
             </span>
             <br class="home-text21" />
             <br class="home-text22" />
