--- a/index.html
+++ b/index.html
@@ -163,28 +163,39 @@
               as a Deep Learning Intern where I work on cutting-edge
               self-learning computer vision models for drone surveillance.
             </span>
-            <br class="home-text21" />
-            <br class="home-text22" />
+            <span class="home-text21">I am also a Graduate Research Assistant at</span>
+            <span class="home-text22">NORTH CAROLINA STATE UNIVERSITY</span>
             <span class="home-text23">
+              where I work on on utilizing data analytics to discern trends and 
+              patterns in agricultural data, crafting and implementing feature-engineering 
+              methods, and developing decision-support dashboard tools for North Carolina 
+              soybean farmers using supervised learning to streamline cultivation practices 
+              and provide data-driven insights as part of the Soybean Extension program 
+              in collaboration with N.C. Plant Science Initiative and 
+              NC State Data Science Academy.
+            </span>
+            <br class="home-text24" />
+            <br class="home-text25" />
+            <span class="home-text26">
               Before this, my professional journey has included a stint as a
               Machine Learning Engineer at the
             </span>
-            <span class="home-text24">NATIONAL INFORMATICS CENTRE</span>
-            <span class="home-text25">
+            <span class="home-text27">NATIONAL INFORMATICS CENTRE</span>
+            <span class="home-text28">
               in Kolkata, where I led the development and deployment of facial
               recognition systems and played a pivotal role in research and
               development of Explainable and Interpretable AI-based solutions
               for Education and Healthcare. I also have had the opportunity to
               work as a Systems Engineer at
             </span>
-            <span class="home-text26">INFOSYS</span>
-            <span class="home-text27">
+            <span class="home-text29">INFOSYS</span>
+            <span class="home-text30">
               in Mysore, India, where I honed my skills in Python, SQL,
               Angular7, and .NET Development.
             </span>
             <br />
-            <br class="home-text29" />
-            <span class="home-text30">
+            <br class="home-text31" />
+            <span class="home-text32">
               I am proficient in a wide array of programming languages including
               Python, MATLAB, C#, C, C++, TypeScript, SAS and Java. My expertise
               extends to libraries such as TensorFlow, Keras, PyTorch, OpenCV,
