--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               North Carolina. I am currently pursuing my Master of Science in
               Computer Engineering from
             </span>
-            <span class="home-text05">North Carolina State University</span>
+            <span class="home-text05">NORTH CAROLINA STATE UNIVERSITY</span>
             <span class="home-text06">
               , where I am specializing in Advanced Machine Learning, Neural
               Networks, Data Science, and several other cutting-edge fields.
