--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="#experience" class="home-link03 button">Experience</a>
           <a href="#projects" class="home-link04 button">Projects</a>
           <a
-            href="https://drive.google.com/file/d/1MIXPUvMNbEx6aSlTVOFIgYfJECqwY8Is/view?usp=sharing"
+            href="https://drive.google.com/file/d/1MIXPUvMNbEx6aSlTVOFIgYfJECqwY8Is/view"
             target="_blank"
             rel="noreferrer noopener"
             class="home-link05 button"
